--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,17 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+body{
+  background-color: green;
+}
+
+.card {
+  width: 300px;
+  height: 500px;
+}
+.suitCard {
+  padding: 10px;
+  font-size: 50px;
+}
+
+.number {
+  font-size: 150px;
+}
