--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,8 @@ body {
 .card {
   width: 300px;
   height: 500px;
+  border: 3px solid rgb(240, 239, 239);
+  border-radius: 28px;
 }
 .suitCard {
   padding: 10px;
